Add a Arthur Conan Doyle Tribute Page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div id="tribute-info">
             <div class="container">
-                <h3>Heres The Timeline of Sir Arthur Conan Doyle</h3>
+                <h3>Here is The Timeline of Sir Arthur Conan Doyle</h3>
                 <ul>
                     <li>1859 Born in Edinburgh, Scotland</li>
                     <li>1876 Studied Medicine at University of Edinburgh Medical School</li>
